Fix 61079 Need ability to start generic OSGI bundles specified in "eclipse.properties" file